Fix column alignment

--- a/src/components/RecentOrders/RecentOrders.module.scss
+++ b/src/components/RecentOrders/RecentOrders.module.scss
@@ -6,10 +6,9 @@
 
     .header {
         width: 1135px;
-        height: 41px;
         background-color: $recent-orders-header-color;
         padding-top: 9px;
-        padding-bottom: 36.5px;
+        padding-bottom: 9px;
         margin-left: 15px;
 
         .btn-first {
@@ -42,11 +41,10 @@
             font-family: "Open Sans", sans-serif;
             font-weight: 600;
             margin-left: 340px;
-            vertical-align: middle;
         }
     }
 
-    .categories {
+    .orders {
         width: 1135px;
         height: 24px;
         border-bottom: 1px $recent-orders-categories-border;
@@ -54,29 +52,28 @@
         line-height: 24px;
         margin-left: 15px;
 
-        .date {
-            color: $recent-orders-caategories-text;
+        .categories {
+            color: $recent-orders-categories-text;
             font-size: 10px;
             margin-left: 10px;
-            margin-top: 8px;
-        }
+            display: flex;
+            white-space: nowrap;
 
-        .subject {
-            color: $recent-orders-caategories-text;
-            font-size: 10px;
-            margin-left: 86px;
-        }
-
-        .type {
-            color: $recent-orders-caategories-text;
-            font-size: 10px;
-            margin-left: 410px;
-        }
-
-        .number {
-            color: $recent-orders-caategories-text;
-            font-size: 10px;
-            margin-left: 113px;
+            .date {
+                width: 144.5px;
+            }
+    
+            .subject {
+                width: 448px;
+            }
+    
+            .type {
+                width: 220px;
+            }
+    
+            .number {
+                width: 200px;
+            }
         }
     }
 
