--- a/src/components/colors.sass
+++ b/src/components/colors.sass
@@ -13,7 +13,7 @@ $orders-buttons-color: #F2F2F2,
 $order-buttons-hr-color: #4D4D4D,
 $recent-orders-header-color: #7D869A,
 $recent-orders-categories-border: #D8D8D8,
-$recent-orders-caategories-text: #444444,
+$recent-orders-categories-text: #444444,
 $recent-orders-top-order-border: #D8D8D8,
 $recent-orders-bottom-order-bg: #F2F4F7,
 $recent-orders-bottom-order-border: #95989A,
